SERVER-22495: update optime when journaling is disabled on WT